[TW-37] Move tests to shared module